--- a/J2-support.ipynb
+++ b/J2-support.ipynb
@@ -17,41 +17,114 @@
     "tags": []
    },
    "source": [
-    "## Agenda\n",
-    "**Jour 1: Le langage Python et ses applications**\n",
-    "- **Matin**\n",
-    "    1. Les environnements de travail\n",
-    "    2. Les bases de python\n",
-    "- **Après-midi**\n",
-    "    3. La programation orientée objet (POO) en python\n",
-    "    4. Les modules\n",
-    "\n",
     "**Jour 2: Maniplation de données et visualisation**\n",
     "- **Matin**\n",
     "    1. Les bases de Numpy\n",
     "    2. Pandas, votre nouveau meilleur ami\n",
     "- **Après-midi**\n",
-    "    2. Pandas, votre nouveau meilleur ami\n",
+    "    2. Pandas, votre nouveau meilleur ami"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06b9571d-1de1-41f3-a462-4c22e50e35e7",
+   "metadata": {},
+   "source": [
+    "## Numpy\n",
     "\n",
-    "**Jour 3: Analyse exploratoire, pipeline de données et apprentissage**\n",
-    "- **Matin**\n",
-    "    1. Analyse exploratoire à l'aide de Pandas\n",
-    "    2. Visualition de données\n",
-    "- **Après-midi**\n",
-    "    3. Pandas avancé\n",
-    "    4. Pipelines de données  \n",
-    "        4.1. Ingestion  \n",
-    "        4.2. Stockage et traitement  \n",
-    "        4.3. Applications  "
+    "- [Introduction](https://www.kaggle.com/code/lavanyashukla01/pandas-numpy-python-cheatsheet?scriptVersionId=29739867&cellId=88)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57eca473-10ad-4edd-a3a5-3b6777278d75",
+   "metadata": {},
+   "source": [
+    "# Pandas: Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e315c1aa-a98c-4c0a-9d91-17ab161f3c7b",
+   "metadata": {},
+   "source": [
+    "- [Kaggle Pandas - Lecture & Ecriture](https://www.kaggle.com/code/residentmario/creating-reading-and-writing)\n",
+    "- [Kaggle - Index, Selection & Allocation](https://www.kaggle.com/code/residentmario/indexing-selecting-assigning)\n",
+    "- [kaggle - Fonctions descriptive et maps](https://www.kaggle.com/code/residentmario/summary-functions-and-maps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe24d53f-2c85-4550-ba0a-efc9fcc9cf94",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Quizz: Revue de code"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb48e732-2d20-4c5d-a821-2064dd65e365",
+   "id": "edba7174-0dfe-42e5-ad04-40a518a922fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Birthday Email Sender\n",
+    "-------------------------------------------------------------\n",
+    "pip install pandas openpyxl\n",
+    "excel file cols:\n",
+    "Name, Email, Birthday (MM/DD/YYYY), Last Sent (YYYY)\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import smtplib\n",
+    "from email.message import EmailMessage\n",
+    "\n",
+    "\n",
+    "def send_email(recipient, subject, msg):\n",
+    "   GMAIL_ID = 'your_email_here'\n",
+    "   GMAIL_PWD = 'your_password_here'\n",
+    "\n",
+    "   email = EmailMessage()\n",
+    "   email['Subject'] = subject\n",
+    "   email['From'] = GMAIL_ID\n",
+    "   email['To'] = recipient\n",
+    "   email.set_content(msg)\n",
+    "\n",
+    "   with smtplib.SMTP_SSL('smtp.gmail.com', 465) as gmail_obj:\n",
+    "       gmail_obj.ehlo()\n",
+    "       gmail_obj.login(GMAIL_ID, GMAIL_PWD)\n",
+    "       gmail_obj.send_message(email)\n",
+    "   print('Email sent to ' + str(recipient) + ' with Subject: \\''\n",
+    "         + str(subject) + '\\' and Message: \\'' + str(msg) + '\\'')\n",
+    "\n",
+    "\n",
+    "def send_bday_emails(bday_file):\n",
+    "   bdays_df = pd.read_excel(bday_file)\n",
+    "   today = datetime.now().strftime('%m-%d')\n",
+    "   year_now = datetime.now().strftime('%Y')\n",
+    "   sent_index = []\n",
+    "\n",
+    "   for idx, item in bdays_df.iterrows():\n",
+    "       bday = item['Birthday'].to_pydatetime().strftime('%m-%d')\n",
+    "       if (today == bday) and year_now not in str(item['Last Sent']):\n",
+    "           msg = 'Happy Birthday ' + str(item['Name'] + '!!')\n",
+    "           send_email(item['Email'], 'Happy Birthday', msg)\n",
+    "           sent_index.append(idx)\n",
+    "\n",
+    "   for idx in sent_index:\n",
+    "       bdays_df.loc[bdays_df.index[idx], 'Last Sent'] = str(year_now)\n",
+    "\n",
+    "   bdays_df.to_excel(bday_file, index=False)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "   send_bday_emails(bday_file='your_bdays_list.xlsx')"
+   ]
   }
  ],
  "metadata": {
