--- a/misc/pandas/creating-reading-and-writing.ipynb
+++ b/misc/pandas/creating-reading-and-writing.ipynb
@@ -1008,7 +1008,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cpu:m87"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1022,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   },
   "papermill": {
    "default_parameters": {},
