--- a/misc/pandas/exercise-creating-reading-and-writing-Copy1.ipynb
+++ b/misc/pandas/exercise-creating-reading-and-writing-Copy1.ipynb
@@ -15,12 +15,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/Kaggle/learntools.git\n",
+      "  Cloning https://github.com/Kaggle/learntools.git to c:\\users\\lapouble.v\\appdata\\local\\temp\\pip-req-build-pbleasvp\n",
+      "  Resolved https://github.com/Kaggle/learntools.git to commit 50dffce293eade886869ec092ab1287b62566170\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Kaggle/learntools.git 'C:\\Users\\lapouble.v\\AppData\\Local\\Temp\\pip-req-build-pbleasvp'\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  python setup.py egg_info did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [8 lines of output]\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"<string>\", line 2, in <module>\n",
+      "    File \"<pip-setuptools-caller>\", line 34, in <module>\n",
+      "    File \"C:\\Users\\lapouble.v\\AppData\\Local\\Temp\\pip-req-build-pbleasvp\\setup.py\", line 1, in <module>\n",
+      "      import learntools\n",
+      "    File \"C:\\Users\\lapouble.v\\AppData\\Local\\Temp\\pip-req-build-pbleasvp\\learntools\\__init__.py\", line 1, in <module>\n",
+      "      from . import core, data_viz_to_coder, deep_learning, embeddings, gans, \\\n",
+      "  ImportError: cannot import name 'ml_insights' from partially initialized module 'learntools' (most likely due to a circular import) (C:\\Users\\lapouble.v\\AppData\\Local\\Temp\\pip-req-build-pbleasvp\\learntools\\__init__.py)\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "Encountered error while generating package metadata.\n",
+      "\n",
+      "See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install git+https://github.com/Kaggle/learntools.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'learntools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_37432\\3991601723.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_option\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'display.max_rows'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mlearntools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbinder\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mbinder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mglobals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mlearntools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpandas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreating_reading_and_writing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Setup complete.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'learntools'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "pd.set_option('max_rows', 5)\n",
+    "pd.set_option('display.max_rows', 5)\n",
     "from learntools.core import binder; binder.bind(globals())\n",
     "from learntools.pandas.creating_reading_and_writing import *\n",
     "print(\"Setup complete.\")"
@@ -242,7 +307,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cpu:m87"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
