--- a/misc/pandas/summary-functions-and-maps.ipynb
+++ b/misc/pandas/summary-functions-and-maps.ipynb
@@ -1093,7 +1093,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cpu:m87"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1107,7 +1107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   },
   "papermill": {
    "default_parameters": {},
